--- a/901-1000.md
+++ b/901-1000.md
@@ -45,3 +45,20 @@
 遍历求某个点左边最大值和右边最小值，再次遍历当最大值小于等于最小值即可
 # 916. Word Subsets
 统计`b`中每个单词出现的最大次数，看`a`是否满足
+# 917. Reverse Only Letters
+双指针交换
+# 918. Maximum Sum Circular Subarray
+用`Kadane`算法求数组中最大连续子数组
+> 累加，碰到负数重新累计，记录遇到的最大值
+
+由于环形，因此如果在环形中，第一个和最后一个肯定会被选中，因此再次使用`Kadane`算法选择出去这两个点的最小连续子数组，用和减去即是包含环形的最大值
+# 919. Complete Binary Tree Inserter
+用数组编号每个节点，并记录`size`，插入一个节点`size/2`即可找到父节点
+
+也可以`bfs`将每个节点放到`list`里面，同样用索引查找
+
+可以用队列记录那些子节点不全的节点，插入时队首进行插入，当两边都插满了，弹出，新的节点放入队列后面
+# 920. Number of Music Playlists
+`dp[i][j]`表示`i`首歌，`j`首不同的播放数
+* 如果是新歌，则可以选剩余的歌
+* 如果是之前重复的，因为最后的`k`首不相同，因此可以选前面的任意一首
