--- a/901-1000.md
+++ b/901-1000.md
@@ -62,3 +62,24 @@
 `dp[i][j]`表示`i`首歌，`j`首不同的播放数
 * 如果是新歌，则可以选剩余的歌
 * 如果是之前重复的，因为最后的`k`首不相同，因此可以选前面的任意一首
+# 921. Minimum Add to Make Parentheses Valid
+左括号加`1`，右括号减`1`，当没有左括号的时候，`result+1`
+# 922. Sort Array By Parity II
+记录奇偶下标，放到结果数组里
+
+可以双指针一次遍历
+``` java
+int j = 1;
+for (int i = 0; i < a.length; i += 2)
+    if (a[i] % 2 == 1) {
+        while (a[j] % 2 == 1)
+            j += 2;
+        int tmp = a[i];
+        a[i] = a[j];
+        a[j] = tmp;
+    }
+```
+# 923. 3Sum With Multiplicity
+计数，然后`3sum`计算每个数的不同情况下的个数
+# 924. Minimize Malware Spread
+使用并查集构建联通块，如果一个联通块包含`2`个病毒，则删掉一个也不能使联通块感染数减少，然后在`1`个病毒的联通块中找`size`最大的那个
