--- a/901-1000.md
+++ b/901-1000.md
@@ -83,3 +83,11 @@ for (int i = 0; i < a.length; i += 2)
 计数，然后`3sum`计算每个数的不同情况下的个数
 # 924. Minimize Malware Spread
 使用并查集构建联通块，如果一个联通块包含`2`个病毒，则删掉一个也不能使联通块感染数减少，然后在`1`个病毒的联通块中找`size`最大的那个
+# 925. Long Pressed Name
+把每个单词的个数记录下来，然后比较
+# 926. Flip String to Monotone Increasing
+记录前缀和，考虑每个分界点翻转需要翻转前面多少个和后面多少个
+# 927. Three Equal Parts
+能分成三段，每段的`1`个数肯定相同，而`1`后面`0`的个数由最后一段`0`个数决定
+* 记录每段的区间，考虑是否合法
+* 或者构造每段字符串，看是否相等
