--- a/901-1000.md
+++ b/901-1000.md
@@ -91,3 +91,31 @@ for (int i = 0; i < a.length; i += 2)
 能分成三段，每段的`1`个数肯定相同，而`1`后面`0`的个数由最后一段`0`个数决定
 * 记录每段的区间，考虑是否合法
 * 或者构造每段字符串，看是否相等
+# 928. Minimize Malware Spread II
+对不在感染点的点求连通块，并记录`size`，再从某个感染点出发看能连接几个连通块，记录整个连通块被几个感染点连通，若超过`2`则删除某个感染点，该连通块仍然被感染。最后比较每个感染点能唯一连接的联通块大小
+>如果一个点被两个感染点连通，则删除任意一个感染点都无作用
+# 929. Unique Email Addresses
+找`+`号前的和@后的，然后处理
+# 930. Binary Subarrays With Sum
+前缀和加`map`
+>有点`2Sum`的感觉
+
+也可以双指针，不过要考虑`0`的移动情况
+``` java
+int n = 1;
+for (int r = 0; r < a.length; r++) {
+    sum += a[r];
+    while (l < r && (a[l] == 0 || sum > s)) {
+        if (sum > s) {
+            n = 1;
+            sum -= a[l];
+        } else {
+            n++;
+        }
+        l++;
+    }
+    if (sum == s) {
+        res += n;
+    }
+}
+```
