--- a/901-1000.md
+++ b/901-1000.md
@@ -122,3 +122,11 @@ for (int r = 0; r < a.length; r++) {
 # 931. Minimum Falling Path Sum
 动态规划，保存到当前节点的最短路径
 # 932. Beautiful Array
+根据等式，左边为偶，因此构造右边为奇（奇数`+`偶数）
+> 奇数组`+`偶数组不影响题目性质，某个`beautiful`数组乘以某个数，或加减某个数不影响题目性质
+
+从开头构造奇偶数组并拼起来
+# 933. Number of Recent Calls
+`t`是上升的，因此用队列模拟即可
+# 934. Shortest Bridge
+`dfs`找岛，将点记入队列中，再`bfs`找另外一个岛
