--- a/901-1000.md
+++ b/901-1000.md
@@ -130,3 +130,5 @@ for (int r = 0; r < a.length; r++) {
 `t`是上升的，因此用队列模拟即可
 # 934. Shortest Bridge
 `dfs`找岛，将点记入队列中，再`bfs`找另外一个岛
+# 935. Knight Dialer
+动态规划，推下一个位置从哪儿转移过来
