--- a/901-1000.md
+++ b/901-1000.md
@@ -132,3 +132,5 @@ for (int r = 0; r < a.length; r++) {
 `dfs`找岛，将点记入队列中，再`bfs`找另外一个岛
 # 935. Knight Dialer
 动态规划，推下一个位置从哪儿转移过来
+# 936. Stamping The Sequence
+直接匹配，把匹配的位置换成`*`，最后逆序输出
