--- a/901-1000.md
+++ b/901-1000.md
@@ -134,3 +134,10 @@ for (int r = 0; r < a.length; r++) {
 动态规划，推下一个位置从哪儿转移过来
 # 936. Stamping The Sequence
 直接匹配，把匹配的位置换成`*`，最后逆序输出
+# 937. Reorder Data in Log Files
+定义排序规则
+# 938. Range Sum of BST
+根据`root`的值来判断往后的方向
+# 939. Minimum Area Rectangle
+根据对角线的两个点确定一个矩形，看此矩形是否能由点集构成
+# 
