--- a/901-1000.md
+++ b/901-1000.md
@@ -140,4 +140,12 @@ for (int r = 0; r < a.length; r++) {
 根据`root`的值来判断往后的方向
 # 939. Minimum Area Rectangle
 根据对角线的两个点确定一个矩形，看此矩形是否能由点集构成
-# 
+# 940. Distinct Subsequences II
+对某个字符，要和不要会有`2`倍的效果，如果之前这个字符出现过，则该字符之前的与当前字符构成重复
+> dp[i+1] = dp[i]*2 - dp[k-1] // `k`是`i`位置字符上一次出现的位置
+
+引入空字符串在第一个位置，最后再减去
+# 941. Valid Mountain Array
+扫描判断
+# 942. DI String Match
+根据字母一个从头加，一个从尾减
