--- a/901-1000.md
+++ b/901-1000.md
@@ -149,3 +149,27 @@ for (int r = 0; r < a.length; r++) {
 扫描判断
 # 942. DI String Match
 根据字母一个从头加，一个从尾减
+# 943. Find the Shortest Superstring
+状压图搜索，先保存每个前后缀重合的长度，组合成图
+
+考虑对`1->2->3`和`2->1->3`这两种状态，当第一种比第二种更短，则后面只需用第一种状态
+>最后一个节点和前面遍历的情况组成状态
+# 944. Delete Columns to Make Sorted
+遍历每一列的元素看是否满足上升
+# 945. Minimum Increment to Make Array Unique
+排序，记录当前最大值
+
+或者桶的思想，桶里个数大于`1`则向后移
+``` java
+for (int num = 0; num <= max; num++) {
+    if (counter[num] > 1) {
+        int d = counter[num] - 1;
+        move += d;
+        counter[num + 1] += d;
+    }
+}
+```
+# 946. Validate Stack Sequences
+用栈模拟
+# 947. Most Stones Removed with Same Row or Column
+并查集，合并行和列
