--- a/901-1000.md
+++ b/901-1000.md
@@ -173,3 +173,26 @@ for (int num = 0; num <= max; num++) {
 用栈模拟
 # 947. Most Stones Removed with Same Row or Column
 并查集，合并行和列
+# 948. Bag of Tokens
+排序后，左右双指针贪心
+# 949. Largest Time for Given Digits
+构造所有的排列，找最大的
+
+也可以四重循环找
+# 950. Reveal Cards In Increasing Order
+倒着推，从最大的开始放，每次放之前把后面一个元素放到首位
+# 951. Flip Equivalent Binary Trees
+递归，讨论`LL&&RR || LR&&RL`
+# 952. Largest Component Size by Common Factor
+把每个数的因子求出来与自身合并到一起
+``` java
+for (int num : A) {
+    double upBound = Math.sqrt(num);
+    for (int i = 2; i <= upBound; i++) {
+        if (num % i == 0) {
+            unionFind.union(num, i);
+            unionFind.union(num, num / i);
+        }
+    }
+}
+```
