--- a/901-1000.md
+++ b/901-1000.md
@@ -196,3 +196,9 @@ for (int num : A) {
     }
 }
 ```
+# 953. Verifying an Alien Dictionary
+记录每个字母的次序，依次比较每个单词
+# 954. Array of Doubled Pairs
+`treemap`分正负记录个数，`0`单独考虑
+# 955. Delete Columns to Make Sorted II
+遍历列，当有后面的小于前面的，则结果加`1`，当前面的小于后面的，则该位置单词的后面的列可以不用再访问，标记为`true`
