--- a/901-1000.md
+++ b/901-1000.md
@@ -202,3 +202,9 @@ for (int num : A) {
 `treemap`分正负记录个数，`0`单独考虑
 # 955. Delete Columns to Make Sorted II
 遍历列，当有后面的小于前面的，则结果加`1`，当前面的小于后面的，则该位置单词的后面的列可以不用再访问，标记为`true`
+# 956. Tallest Billboard
+`dp[i][j]`：表示前`i`个,两边高度差为`j`的情况下，两边组成棍棒的最高公共高度
+``` java
+dp[i][j + h] = Math.max(dp[i][j + h], dp[i - 1][j]); // 放高的那边
+dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.min(j, h)); // 放低的那边
+```
