--- a/901-1000.md
+++ b/901-1000.md
@@ -212,3 +212,4 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 从第一天开始，`14`天会刚好出现一个循环
 # 958. Check Completeness of a Binary Tree
 广度遍历，当出现`null`值时，如果后面还有没有遍历到的结点，说明该树非完全二叉树
+> `LinkedList`可以放`null`
