--- a/901-1000.md
+++ b/901-1000.md
@@ -213,3 +213,6 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 # 958. Check Completeness of a Binary Tree
 广度遍历，当出现`null`值时，如果后面还有没有遍历到的结点，说明该树非完全二叉树
 > `LinkedList`可以放`null`
+# 959. Regions Cut By Slashes
+看做`3*3`的小格，不同的符号划分格子，最后找连通块的个数
+# 
