--- a/901-1000.md
+++ b/901-1000.md
@@ -215,4 +215,6 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 > `LinkedList`可以放`null`
 # 959. Regions Cut By Slashes
 看做`3*3`的小格，不同的符号划分格子，最后找连通块的个数
-# 
+# 960. Delete Columns to Make Sorted III
+转换成求最长的不降子序列，求最长剩几列
+> 对每一个字符串进行判断
