--- a/901-1000.md
+++ b/901-1000.md
@@ -218,3 +218,9 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 # 960. Delete Columns to Make Sorted III
 转换成求最长的不降子序列，求最长剩几列
 > 对每一个字符串进行判断
+# 961. N-Repeated Element in Size 2N Array
+重复两次的即是结果
+# 962. Maximum Width Ramp
+先建立单调栈，再从后往前遍历，与栈顶比较推栈
+# 963. Minimum Area Rectangle II
+枚举合法的三个点，考虑第四个点是否存在
