--- a/901-1000.md
+++ b/901-1000.md
@@ -224,3 +224,14 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 先建立单调栈，再从后往前遍历，与栈顶比较推栈
 # 963. Minimum Area Rectangle II
 枚举合法的三个点，考虑第四个点是否存在
+# 964. Least Operators to Express Number
+将`target`分解为`x`进制，从高位到低位，最高位可能刚好取到某个系数再加上后面的，或者高与一再减去后面的
+# 965. Univalued Binary Tree
+递归判断
+# 966. Vowel Spellchecker
+将元音用#号代替，记录比较优先级
+# 967. Numbers With Same Consecutive Differences
+暴力构造，注意边界
+# 968. Binary Tree Cameras
+贪心的求考虑左右子树的状态，决定当前是否放，如果不放，是否已经被`cover`
+
