--- a/901-1000.md
+++ b/901-1000.md
@@ -234,4 +234,11 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 暴力构造，注意边界
 # 968. Binary Tree Cameras
 贪心的求考虑左右子树的状态，决定当前是否放，如果不放，是否已经被`cover`
+# 969. Pancake Sorting
+找到最大元素的位置然后翻转，然后再从末尾翻转将最大的元素置于正确的位置
+# 970. Powerful Integers
+找到上界遍历
+# 
+找左子树和右子树的位置，决定朝哪个方向遍历
 
+或者只考虑`left`不等于下一个元素时，先遍历右边达到交换目的
