--- a/901-1000.md
+++ b/901-1000.md
@@ -238,7 +238,9 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 找到最大元素的位置然后翻转，然后再从末尾翻转将最大的元素置于正确的位置
 # 970. Powerful Integers
 找到上界遍历
-# 
+# 971. Flip Binary Tree To Match Preorder Traversal
 找左子树和右子树的位置，决定朝哪个方向遍历
 
 或者只考虑`left`不等于下一个元素时，先遍历右边达到交换目的
+# 972. Equal Rational Numbers
+把有理数变分数，循环部分利用等比求和公式推导
