--- a/901-1000.md
+++ b/901-1000.md
@@ -244,3 +244,12 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 或者只考虑`left`不等于下一个元素时，先遍历右边达到交换目的
 # 972. Equal Rational Numbers
 把有理数变分数，循环部分利用等比求和公式推导
+# 973. K Closest Points to Origin
+定义堆排序
+# 974. Subarray Sums Divisible by K
+记录前缀和的余数个数，注意负数的余数需要`+k`变为正数
+# 975. Odd Even Jump
+从后往前遍历，考虑当前元素作为奇次和偶次的能跳到的下一个位置的状态
+> 此状态由下一个状态决定，查找下一个状态维护在`treemap`中
+# 976. Largest Perimeter Triangle
+排序，考虑固定最长边，另外两个边要尽量大，因此只需要考虑挨着这个最大边的两个元素
