--- a/901-1000.md
+++ b/901-1000.md
@@ -253,3 +253,11 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 > 此状态由下一个状态决定，查找下一个状态维护在`treemap`中
 # 976. Largest Perimeter Triangle
 排序，考虑固定最长边，另外两个边要尽量大，因此只需要考虑挨着这个最大边的两个元素
+# 977. Squares of a Sorted Array
+双指针比较大小，先放末尾的位置
+# 978. Longest Turbulent Subarray
+考虑当前符号和上一个符号的区别
+# 979. Distribute Coins in Binary Tree
+后序遍历，将每个需要的量进行传递
+# 980. Unique Paths III
+记录总数量，然后`dfs`回溯
