--- a/901-1000.md
+++ b/901-1000.md
@@ -261,3 +261,13 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 后序遍历，将每个需要的量进行传递
 # 980. Unique Paths III
 记录总数量，然后`dfs`回溯
+# 981. Time Based Key-Value Store
+`map`和二分的搜索，或者用`map`加上`treemap`
+# 982. Triples with Bitwise AND Equal To Zero
+与操作会越来越小，因此可以先将两两相与存起来，然后在遍历求一遍，求的时候如果`count`为`0`可以跳过
+>`count`数组比较稀疏，因此放到外层循环速度较快
+# 983. Minimum Cost For Tickets
+当某一天不需要旅行，则`dp[i]=dp[i-1]`，否则`dp[i]=min(dp[i-1]+cost[0],dp[i-7]+cost[1],dp[i-30]+cost[2])`
+> `i`小于`7`或者`30`时，也可以从第一天买
+# 984. String Without AAA or BBB
+贪心，大数放两个，小数放一个
