--- a/901-1000.md
+++ b/901-1000.md
@@ -271,3 +271,20 @@ dp[i][Math.abs(j - h)] = Math.max(dp[i][Math.abs(j - h)], dp[i - 1][j] + Math.mi
 > `i`小于`7`或者`30`时，也可以从第一天买
 # 984. String Without AAA or BBB
 贪心，大数放两个，小数放一个
+# 985. Sum of Even Numbers After Queries
+考虑该位置和加入元素的奇偶性
+
+也可以偶数时候直接减去，若加上还是偶数则补上
+``` java
+int val = queries[i][0], index = queries[i][1];
+if (a[index] % 2 == 0) res -= a[index];
+a[index] += val;
+if (a[index] % 2 == 0) res += a[index];
+ans[i] = res;
+```
+# 986. Interval List Intersections
+双指针，谁的尾部小移动谁
+# 987. Vertical Order Traversal of a Binary Tree
+前序遍历，记录`x`，`y`坐标，将`x`放到`map`中为索引，`y`的高度乘以一个大数表示值更大，放后面
+# 988. Smallest String Starting From Leaf
+保存路径，到叶子节点的时候比较
