--- a/901-1000.md
+++ b/901-1000.md
@@ -288,3 +288,47 @@ ans[i] = res;
 前序遍历，记录`x`，`y`坐标，将`x`放到`map`中为索引，`y`的高度乘以一个大数表示值更大，放后面
 # 988. Smallest String Starting From Leaf
 保存路径，到叶子节点的时候比较
+# 989. Add to Array-Form of Integer
+大数加法，比较费时
+# 990. Satisfiability of Equality Equations
+并查集，先把相等的合并起来，最后判断不相等是否在同一个连通分量里
+# 991. Broken Calculator
+逆向，`y`可以加`1`或者除以`2`，让`y`尽可能的除`2`
+``` java
+while (x < y) {
+    if ((y % 2) == 0) {
+        y /= 2;
+        result++;
+    } else {
+        y = (y + 1) / 2;
+        result += 2;
+    }
+}
+return result + x - y;
+```
+# 992. Subarrays with K Different Integers
+双指针，当元素为`k`的时候，考虑慢指针能移动多少位置，最后将移动的步数恢复
+> 在特殊情况下将退化
+
+考虑最多不超过`k`的子数组个数，最后`count(k)-count(k-1)`
+``` java
+int count(int[] a, int k) {
+int n = a.length;
+int[] f = new int[n + 1];
+int count = 0;
+int j = 0;
+int res = 0;
+for (int i = 0; i < n; i++) {
+    if (++f[a[i]] == 1) {
+        count++;
+    }
+    while (count > k) {
+        if (--f[a[j++]] == 0) {
+            count--;
+        }
+    }
+    res += i - j + 1;
+}
+return res;
+}
+```
