--- a/901-1000.md
+++ b/901-1000.md
@@ -332,3 +332,15 @@ for (int i = 0; i < n; i++) {
 return res;
 }
 ```
+# 993. Cousins in Binary Tree
+记录当前该节点的父节点和高度位置，最后比较
+# 994. Rotting Oranges
+多源的`bfs`
+# 995. Minimum Number of K Consecutive Bit Flips
+贪心，遇到`0`即翻转后面一段，对这种一个区间的操作可以标记结束位置，同时记录整个区间的操作次数
+# 996. Number of Squareful Arrays
+状态压缩记录使用状态，然后考虑前一个和当前元素是否是构成平方数。
+
+由于不能重复，所以用`last`标记，这样需要排列。或者可以在循环前声明一个`set`，每次用的时候看是否在`set`里
+
+`pos`可以省略，用`state`的值代替，当`state`全`1`时即遍历完
