--- a/901-1000.md
+++ b/901-1000.md
@@ -344,3 +344,32 @@ return res;
 由于不能重复，所以用`last`标记，这样需要排列。或者可以在循环前声明一个`set`，每次用的时候看是否在`set`里
 
 `pos`可以省略，用`state`的值代替，当`state`全`1`时即遍历完
+# 997. Find the Town Judge
+法官出度为`0`，入度为`n-1`
+# 998. Maximum Binary Tree II
+`val`大于`root`的值，就把`root`当做`val`节点左孩子，否则，就把`val`插入到右孩子的相应位置
+# 999. Available Captures for Rook
+找到`R`位置，向其他方向遍历
+# 1000. Minimum Cost to Merge Stones
+区间`dp`问题，注意到最后一次合并，不管前面怎么合并，`cost`均为数组的和
+> dp[i][j][k] 表示区间[i,j]合并成k堆的cost
+``` java
+// 将区间分k堆，等效于找个位置分为前面1堆和后面k-1堆
+dp[i][j][k] = Math.min(dp[i][j][k], dp[i][l][1] + dp[l+1][j][k-1])
+// 最后的k堆变为1堆
+dp[i][j][1] = dp[i][j][k] + sum(i,j)
+```
+``` java
+for (int len = 2; len <= n; len++) {
+    for (int i = 1; i <= n - len + 1; i++) {
+        int j = i + len - 1;
+        for (int k = 2; k <= K; k++) {
+            for (int p = i; p < j; p++) {
+                dp[i][j][k] = Math.min(dp[i][j][k], dp[i][p][k - 1] + dp[p + 1][j][1]);
+            }
+        }
+        dp[i][j][1] = min(dp[i][j][1], dp[i][j][K] + sum[j] - sum[i - 1]);
+    }
+}
+```
+
