--- a/1001-1100.md
+++ b/1001-1100.md
@@ -5,3 +5,5 @@
 # 1003. Check If Word Is Valid After Substitutions
 遇到`c`进行一次结算，将`a`和`b`保留在栈中
 > 第一个`c`前肯定是`ab`
+# 1004. Max Consecutive Ones III
+滑动窗口
