--- a/1001-1100.md
+++ b/1001-1100.md
@@ -7,3 +7,12 @@
 > 第一个`c`前肯定是`ab`
 # 1004. Max Consecutive Ones III
 滑动窗口
+# 1005. Maximize Sum Of Array After K Negations
+排序每次对最小值进行取反操作
+# 1006. Clumsy Factorial
+四个一组讨论
+# 1007. Minimum Domino Rotations For Equal Row
+考虑上下全换成`1`到`6`的情况
+>其实只可能是`a[0]`和`b[0]`中的一个数
+# 1008. Construct Binary Search Tree from Preorder Traversal
+分区间构造
