--- a/1001-1100.md
+++ b/1001-1100.md
@@ -16,3 +16,11 @@
 >其实只可能是`a[0]`和`b[0]`中的一个数
 # 1008. Construct Binary Search Tree from Preorder Traversal
 分区间构造
+# 1009. Complement of Base 10 Integer
+构造全`1`异或
+# 1010. Pairs of Songs With Total Durations Divisible by 60
+求余的`two sum`
+# 1011. Capacity To Ship Packages Within D Days
+二分判断，求最小满足的
+# 1012. Numbers With Repeated Digits
+数位`dp`
