--- a/1001-1100.md
+++ b/1001-1100.md
@@ -24,3 +24,28 @@
 二分判断，求最小满足的
 # 1012. Numbers With Repeated Digits
 数位`dp`
+# 1013. Partition Array Into Three Parts With Equal Sum
+累加到`sum/3`，计数
+# 1014. Best Sightseeing Pair
+记录左边的`max`
+# 1015. Smallest Integer Divisible by K
+看某个余数是否已经出现，出现过说明要开始循环节了
+
+除去`2`和`5`，其他都有解
+
+另有等价的两个式子，后面的式子可以解决溢出问题
+``` java
+while (x % k != 0) {
+    x = x * 10 + 1;
+}
+```
+``` java
+while (x % k != 0) {
+    x = x % k;
+    x = x * 10 + 1;
+}
+```
+# 1016. Binary String With Substrings Representing 1 To N
+`s`为`1000`位，将`s`以`1`开头的且长度小于`32`，值小于等于`n`的全放到`set`里，最后看`size`和`n`是否相等
+
+另外考虑`s`的长度限制了表示的数，因此直接从`1`到`n`遍历，很快会有不能表示的数
