--- a/1001-1100.md
+++ b/1001-1100.md
@@ -49,3 +49,11 @@ while (x % k != 0) {
 `s`为`1000`位，将`s`以`1`开头的且长度小于`32`，值小于等于`n`的全放到`set`里，最后看`size`和`n`是否相等
 
 另外考虑`s`的长度限制了表示的数，因此直接从`1`到`n`遍历，很快会有不能表示的数
+# 1017. Convert to Base -2
+考虑当前为时负还是正，把当前位置的影响加回去，如果为正则减`1`，为负加`1`
+# 1018. Binary Prefix Divisible By 5
+用余数进行后面的计算防止溢出
+# 1019. Next Greater Node In Linked List
+单调栈
+# 1020. Number of Enclaves
+每次`dfs`统计个数，并记录该联通块是否应该加入结果
