--- a/1001-1100.md
+++ b/1001-1100.md
@@ -57,3 +57,13 @@ while (x % k != 0) {
 单调栈
 # 1020. Number of Enclaves
 每次`dfs`统计个数，并记录该联通块是否应该加入结果
+
+也可以将最外圈的先加入，再从最外圈的进行`bfs`
+# 1021. Remove Outermost Parentheses
+`count`记录，将一头一尾去掉即可
+# 1022. Sum of Root To Leaf Binary Numbers
+递归路径，记录每个路径的值
+# 1023. Camelcase Matching
+依次比较
+# 1024. Video Stitching
+贪心每一轮找能更新的最大的值
