--- a/1001-1100.md
+++ b/1001-1100.md
@@ -67,3 +67,14 @@ while (x % k != 0) {
 依次比较
 # 1024. Video Stitching
 贪心每一轮找能更新的最大的值
+# 1025. Divisor Game
+当为偶数时，则一直拿`1`即可获胜，奇数拿一次变成偶数，对方获胜
+# 1026. Maximum Difference Between Node and Ancestor
+记录遍历到的最大值最小值，每次拿出来与当前节点比较
+# 1027. Longest Arithmetic Sequence
+`dp[i][diff]`，表示到`i`位置，`diff`差值的最大长度
+``` java
+dp[i][diff] = Math.max(dp[i][diff], dp[j][diff] + 1)
+```
+# 1028. Recover a Tree From Preorder Traversal
+先把每个点的深度记下来，然后每次找是否存在深度一样的点，分别放置左右节点
