--- a/1001-1100.md
+++ b/1001-1100.md
@@ -78,3 +78,11 @@ dp[i][diff] = Math.max(dp[i][diff], dp[j][diff] + 1)
 ```
 # 1028. Recover a Tree From Preorder Traversal
 先把每个点的深度记下来，然后每次找是否存在深度一样的点，分别放置左右节点
+# 1029. Two City Scheduling
+假设全部人都取`b`，现在选一半的人去`a`，最好选`cost[i][0]-cost[i][1]`最小的
+# 1030. Matrix Cells in Distance Order
+从初始点开始向外`bfs`
+# 1031. Maximum Sum of Two Non-Overlapping Subarrays
+前缀和，记录到某个位置长为`l`的最大值，从后遍历，记录`m`长度最大值
+# 1032. Stream of Characters
+从单词最后一个字符构建`trie`树
