--- a/1001-1100.md
+++ b/1001-1100.md
@@ -86,3 +86,11 @@ dp[i][diff] = Math.max(dp[i][diff], dp[j][diff] + 1)
 前缀和，记录到某个位置长为`l`的最大值，从后遍历，记录`m`长度最大值
 # 1032. Stream of Characters
 从单词最后一个字符构建`trie`树
+# 1033. Moving Stones Until Consecutive
+最大值即是两边都往中间一步一步走，最小值需要考虑`0,1,2`三种情况
+# 1034. Coloring A Border
+`bfs`
+# 1035. Uncrossed Lines
+最长公共子序列
+# 1036. Escape a Large Maze
+`block`最多`200`，最多能围成的点是斜三角`n*(n-1)/2`个，因此考虑从起点或者终点是否都能遍历到这么多个点，可以则说明可以到达
