--- a/1001-1100.md
+++ b/1001-1100.md
@@ -94,3 +94,30 @@ dp[i][diff] = Math.max(dp[i][diff], dp[j][diff] + 1)
 最长公共子序列
 # 1036. Escape a Large Maze
 `block`最多`200`，最多能围成的点是斜三角`n*(n-1)/2`个，因此考虑从起点或者终点是否都能遍历到这么多个点，可以则说明可以到达
+# 1037. Valid Boomerang
+判断斜率
+
+三个点是否组成的三角形面积为`0`，面积公式为`S=1/2[(x1y2-x2y1)+(x2y3-x3y2)+(x3y1-x1y3)]`
+``` java
+(p[0][0] * (p[1][1] - p[2][1]) + p[1][0] * (p[2][1] - p[0][1]) + p[2][0] * (p[0][1] - p[1][1])) != 0;
+```
+# 1038. Binary Search Tree to Greater Sum Tree
+逆着做中序遍历，遍历某个左边节点的时候，存储了大于等于该值的结果
+# 1039. Minimum Score Triangulation of Polygon
+区间`dp`问题，跟石子堆合并差不多
+
+`dp[i][j]`合并后，只需再考虑i位置和j位置与其他点的关系
+``` java
+for (int len = 3; len <= N; len++) {
+    for (int left = 0; left <= N - len; left++) {
+        int right = left + len - 1;
+        dp[left][right] = Integer.MAX_VALUE;
+        for (int i = left + 1; i < right; i++) {
+            dp[left][right] = Math.min(dp[left][right], dp[left][i] + dp[i][right] + A[i] * A[left] * A[right]);
+        }
+    }
+}
+return dp[0][N - 1];
+```
+# 1040. Moving Stones Until Consecutive II
+滑动窗口，填充空位
