--- a/1001-1100.md
+++ b/1001-1100.md
@@ -121,3 +121,18 @@ return dp[0][N - 1];
 ```
 # 1040. Moving Stones Until Consecutive II
 滑动窗口，填充空位
+# 1041. Robot Bounded In Circle
+中间形成环，但是仍然可能能走出去，所以只需考虑起点和终点的关系，如果起点终点不相等，且方向一样，则没有环，方向不同则有环
+# 1042. Flower Planting With No Adjacent
+考虑每个点的临近点的颜色，选一个没有用过的着色
+# 1043. Partition Array for Maximum Sum
+`dp[i]`，表示到`i`位置的最大值
+``` java
+for (int j = i; i - j + 1 <= k && j > 0; j--) {
+    max = Math.max(max, a[j - 1]);
+    dp[i] = Math.max(dp[i], dp[j - 1] + (i - j + 1) * max);
+}
+```
+# 1044. Longest Duplicate Substring
+`hash`，二分长度
+> 很容易冲突，考虑做两个`hash`
