--- a/1001-1100.md
+++ b/1001-1100.md
@@ -136,3 +136,20 @@ for (int j = i; i - j + 1 <= k && j > 0; j--) {
 # 1044. Longest Duplicate Substring
 `hash`，二分长度
 > 很容易冲突，考虑做两个`hash`
+# 1046. Last Stone Weight
+优先队列，每次弹出最大的两个
+# 1048. Longest String Chain
+排序后`dp`
+# 1049. Last Stone Weight II
+转换为分两堆，使得差值最小的问题，背包
+``` java
+int maxCapacity = sum/2;
+int[] dp = new int[maxCapacity + 1];
+for (int i = 0; i < len; i++) {
+    int curStone = stones[i];
+    for (int j = maxCapacity; j >= curStone; j--) {
+        dp[j] = Math.max(dp[j], dp[j-curStone] + curStone);
+    }
+}
+return sum - 2 * dp[maxCapacity];
+```
