--- a/1001-1100.md
+++ b/1001-1100.md
@@ -153,3 +153,13 @@ for (int i = 0; i < len; i++) {
 }
 return sum - 2 * dp[maxCapacity];
 ```
+# 1051. Height Checker
+排序后比较不一样的个数
+# 1052. Grumpy Bookstore Owner
+滑动窗口
+# 1053. Previous Permutation With One Swap
+从后往前找第一个`a[i]>a[i-1]`的位置，`i`即是要交换的左端点，再在后面找不大于`a[i]`的最大值（相等用第一个）
+# 1054. Distant Barcodes
+用堆，每次选最大出现次数的两个出来
+
+也可以把最大的先按计数位置排，一直排到头后按1重新开始排
