--- a/1001-1100.md
+++ b/1001-1100.md
@@ -163,3 +163,11 @@ return sum - 2 * dp[maxCapacity];
 用堆，每次选最大出现次数的两个出来
 
 也可以把最大的先按计数位置排，一直排到头后按1重新开始排
+# 1071. Greatest Common Divisor of Strings
+如果`s1+s2==s2+s1`则有解，再对长度求`gcd`
+# 1072. Flip Columns For Maximum Number of Equal Rows
+按行统计相同类型的个数，取最大的，相同类型也包括完全相反的情况
+# 1073. Adding Two Negabinary Numbers
+按二进制去计算，考虑进制
+# 1074. Number of Submatrices That Sum to Target
+分成一列一列的和，求`A+B`的类型
