--- a/1001-1100.md
+++ b/1001-1100.md
@@ -171,3 +171,27 @@ return sum - 2 * dp[maxCapacity];
 按二进制去计算，考虑进制
 # 1074. Number of Submatrices That Sum to Target
 分成一列一列的和，求`A+B`的类型
+# 1078. Occurrences After Bigram
+分割后比较
+# 1079. Letter Tile Possibilities
+按长度生成集合
+
+考虑用个数进行生成
+``` java
+int dfs(int[] counter){
+    int sum = 0;
+    for(int i = 0; i < 26; i++){
+        if(counter[i] > 0){
+            sum++;
+            counter[i]--;
+            sum += dfs(counter);
+            counter[i]++;
+        }
+    }
+    return sum;
+}
+```
+# 1080. Insufficient Nodes in Root to Leaf Paths
+后序遍历，看是否需要删除。也可以返回节点（空或当前节点）
+# 1081. Smallest Subsequence of Distinct Characters
+用栈维护关系，当更小的进来，而且栈顶在后面的字符串中还存在，则出栈
