--- a/1001-1100.md
+++ b/1001-1100.md
@@ -195,3 +195,11 @@ int dfs(int[] counter){
 后序遍历，看是否需要删除。也可以返回节点（空或当前节点）
 # 1081. Smallest Subsequence of Distinct Characters
 用栈维护关系，当更小的进来，而且栈顶在后面的字符串中还存在，则出栈
+# 1089. Duplicate Zeros
+计算中间有多少个`0`，注意最后一个元素为`0`的情况
+# 1090. Largest Values From Labels
+排序，按大小去取
+# 1091. Shortest Path in Binary Matrix
+`bfs`八个方向，注意边界
+# 1092. Shortest Common Supersequence
+先求最大公共子序列，再根据`dp`值反推
