--- a/1001-1100.md
+++ b/1001-1100.md
@@ -203,3 +203,11 @@ int dfs(int[] counter){
 `bfs`八个方向，注意边界
 # 1092. Shortest Common Supersequence
 先求最大公共子序列，再根据`dp`值反推
+# 1093. Statistics from a Large Sample
+理解数组的意思，直接统计，注意中位数的统计方法
+# 1094. Car Pooling
+在线段上对区间记录增加和减少
+# 1095. Find in Mountain Array
+先二分通过`mid`和`mid+1`找最大的位置，再在前面一段找和后面一段找
+# 1096. Brace Expansion II
+找到最中间的括号部分，拆开后递归求解
