--- a/1001-1100.md
+++ b/1001-1100.md
@@ -106,7 +106,7 @@ dp[i][diff] = Math.max(dp[i][diff], dp[j][diff] + 1)
 # 1039. Minimum Score Triangulation of Polygon
 区间`dp`问题，跟石子堆合并差不多
 
-`dp[i][j]`合并后，只需再考虑i位置和j位置与其他点的关系
+`dp[i][j]`合并后，只需再考虑`i`位置和`j`位置与其他点的关系
 ``` java
 for (int len = 3; len <= N; len++) {
     for (int left = 0; left <= N - len; left++) {
