--- a/1101-1200.md
+++ b/1101-1200.md
@@ -28,3 +28,11 @@ p=(int)Math.sqrt(2*c+0.25)-0.5
 使用信号量
 # 1117. Building H2O
 使用信号量
+# 1122. Relative Sort Array
+转换为`Integer`排序，或者用桶排序
+# 1123. Lowest Common Ancestor of Deepest Leaves
+返回节点和高度
+# 1124. Longest Well-Performing Interval
+转换为`1`和`-1`之后求前缀和，对每个`j`找`j-1`出现的最早位置，这一段肯定为`1`是满足的
+# 1125. Smallest Sufficient Team
+`01`背包问题，转换为位运算递推
