--- a/1101-1200.md
+++ b/1101-1200.md
@@ -36,3 +36,18 @@ p=(int)Math.sqrt(2*c+0.25)-0.5
 转换为`1`和`-1`之后求前缀和，对每个`j`找`j-1`出现的最早位置，这一段肯定为`1`是满足的
 # 1125. Smallest Sufficient Team
 `01`背包问题，转换为位运算递推
+# 1128. Number of Equivalent Domino Pairs
+类似`A+B`问题
+# 1129. Shortest Path with Alternating Colors
+交替的`bfs`，记录当前的颜色
+# 1130. Minimum Cost Tree From Leaf Values
+遍历分割点求左右两边的值，类似[1039](https://github.com/humwawe/leetcode/blob/master/1001-1100.md#1039-minimum-score-triangulation-of-polygon)
+
+另外考虑贪心的思路，每次选两个乘积的最小值，用单调栈来维护
+``` java
+for (int n : arr) {
+    while (stack.peek() < n) ans += stack.pop() * Math.min(stack.peek(), n);
+    stack.push(n);
+}
+while (stack.size() > 2) ans += stack.pop() * stack.peek();
+```
