--- a/1101-1200.md
+++ b/1101-1200.md
@@ -51,3 +51,13 @@ for (int n : arr) {
 }
 while (stack.size() > 2) ans += stack.pop() * stack.peek();
 ```
+# 1131. Maximum of Absolute Value Expression
+曼哈顿距离的公式，展开绝对值，只需要将数组合并后求里面的最大值最小值相减的结果
+# 1137. N-th Tribonacci Number
+递推
+# 1138. Alphabet Board Path
+找到点的差值，注意最后一个点的位置，考虑左上右下的放下进行操作
+# 1139. Largest 1-Bordered Square
+记录每个点上面和左边有多少个连续的`1`，对每个点考虑能否构成正方形
+# 1140. Stone Game II
+记忆化递归，`dp`表示前者可以比后者多拿的差值
