--- a/1101-1200.md
+++ b/1101-1200.md
@@ -61,3 +61,25 @@ while (stack.size() > 2) ans += stack.pop() * stack.peek();
 记录每个点上面和左边有多少个连续的`1`，对每个点考虑能否构成正方形
 # 1140. Stone Game II
 记忆化递归，`dp`表示前者可以比后者多拿的差值
+# 1143. Longest Common Subsequence
+`dp[i][j]`，表示到`i`和到`j`的时候（可不包含）的最长公共前缀
+``` java
+for(int i = 1; i<=m; i++){
+    for(int j = 1; j<=n; j++){
+        if(text1.charAt(i-1) == text2.charAt(j-1)){
+            dp[i][j] = dp[i-1][j-1] + 1;
+        }else{
+            dp[i][j] = Math.max(dp[i-1][j],dp[i][j-1]);
+        }
+    }
+}
+```
+# 1144. Decrease Elements To Make Array Zigzag
+分别考虑奇数位置和偶数位置比两边小的情况，端点特殊考虑
+# 1145. Binary Tree Coloring Game
+统计左右子树的个数，判断选某个点是否能比一号选手多
+# 1146. Snapshot Array
+每个位置使用`treeMap`存储
+# 1147. Longest Chunked Palindrome Decomposition
+找左右两边相等的情况，再递归求中间
+>贪心的找到第一个相等的即是最大的分割
