--- a/1101-1200.md
+++ b/1101-1200.md
@@ -83,3 +83,15 @@ for(int i = 1; i<=m; i++){
 # 1147. Longest Chunked Palindrome Decomposition
 找左右两边相等的情况，再递归求中间
 >贪心的找到第一个相等的即是最大的分割
+# 1154. Day of the Year
+计算每个月的天数，加起来
+# 1155. Number of Dice Rolls With Target Sum
+背包问题，记忆化递归比较好写
+# 1156. Swap For Longest Repeated Character Substring
+考虑每一个字母为最长的情况，滑动窗口只能有一个不为当前字母的值
+# 1157. Online Majority Element In Subarray
+暴力的思路是先在区间中按摩尔投票两两相抵的求众数，然后看是否满足的
+
+二分的方法是记录每个数的下标和出现的次数，按次数大小排序依次尝试，用`left`和`right`在下标中搜索位置，求得两个位置之间的元素个数，看是否满足
+
+可以用在摩尔投票的基础上用线段树，保留每个区间投票的结果，再合并
