--- a/1101-1200.md
+++ b/1101-1200.md
@@ -95,3 +95,15 @@ for(int i = 1; i<=m; i++){
 二分的方法是记录每个数的下标和出现的次数，按次数大小排序依次尝试，用`left`和`right`在下标中搜索位置，求得两个位置之间的元素个数，看是否满足
 
 可以用在摩尔投票的基础上用线段树，保留每个区间投票的结果，再合并
+# 1160. Find Words That Can Be Formed by Characters
+比较单词是否能被构成
+# 1161. Maximum Level Sum of a Binary Tree
+`bfs`
+# 1162. As Far from Land as Possible
+将`1`加入队列，多源`bfs`
+# 1163. Last Substring in Lexicographical Order
+暴力容易超时
+
+两个指针指向匹配位置，比较后交替向后移动
+
+后缀数组
