--- a/1101-1200.md
+++ b/1101-1200.md
@@ -107,3 +107,11 @@ for(int i = 1; i<=m; i++){
 两个指针指向匹配位置，比较后交替向后移动
 
 后缀数组
+# 1169. Invalid Transactions
+暴力比较
+# 1170. Compare Strings by Frequency of the Smallest Character
+长度只有`10`，记录每个长度出现的个数
+# 1171. Remove Zero Sum Consecutive Nodes from Linked List
+前缀和，记录前缀和的最后位置，再从前遍历遇到出现的和直接指向下一个节点
+# 1172. Dinner Plate Stacks
+双指针维护`leftNotFull`和`rightNotEmpty`
