--- a/1101-1200.md
+++ b/1101-1200.md
@@ -115,3 +115,12 @@ for(int i = 1; i<=m; i++){
 前缀和，记录前缀和的最后位置，再从前遍历遇到出现的和直接指向下一个节点
 # 1172. Dinner Plate Stacks
 双指针维护`leftNotFull`和`rightNotEmpty`
+# 1175. Prime Arrangements
+求出质数个数，结果为质数的全排列乘以非质数的全排列
+# 1177. Can Make Palindrome from Substring
+前缀和，每个位置记录`26`个字母的出现次数
+# 1178. Number of Valid Words for Each Puzzle
+将每个字符转换为数字，存储个数，遍历二进制的子集
+```
+for (int i = k; i > 0; i = (i - 1) & k)
+``` 
