--- a/1101-1200.md
+++ b/1101-1200.md
@@ -123,4 +123,22 @@ for(int i = 1; i<=m; i++){
 将每个字符转换为数字，存储个数，遍历二进制的子集
 ```
 for (int i = k; i > 0; i = (i - 1) & k)
-``` 
+```
+# 1184. Distance Between Bus Stops
+正反分别计算
+# 1185. Day of the Week
+调用库函数
+# 1186. Maximum Subarray Sum with One Deletion
+`dp[i][2]`，表示选`i`的时候前面是否已经删除
+``` java
+dp[i][0] = Math.max(arr[i], dp[i - 1][0] + arr[i]);
+dp[i][1] = Math.max(dp[i - 1][0], dp[i - 1][1] + arr[i]);
+```
+# 1187. Make Array Strictly Increasing
+`dp[i][j]`，表示将前`i`个字符使用`k`次操作变成单调递增的时，`i`位置最小的值
+> `dp[i][j]`存的最小可以的值
+``` java
+dp[i][j] = Math.min(dp[i][j], arr1[i - 1]);
+Integer higher = set.higher(dp[i - 1][j - 1]);
+dp[i][j] = Math.min(dp[i][j], higher);
+```
