--- a/1101-1200.md
+++ b/1101-1200.md
@@ -136,7 +136,8 @@ dp[i][1] = Math.max(dp[i - 1][0], dp[i - 1][1] + arr[i]);
 ```
 # 1187. Make Array Strictly Increasing
 `dp[i][j]`，表示将前`i`个字符使用`k`次操作变成单调递增的时，`i`位置最小的值
-> `dp[i][j]`存的最小可以的值
+
+> `dp[i][j]`存的最小可以的值，操作多少次可以考虑把次数放到状态中，如[1186](https://github.com/humwawe/leetcode/blob/master/1101-1200.md#1186-maximum-subarray-sum-with-one-deletion)
 ``` java
 dp[i][j] = Math.min(dp[i][j], arr1[i - 1]);
 Integer higher = set.higher(dp[i - 1][j - 1]);
