--- a/1101-1200.md
+++ b/1101-1200.md
@@ -145,3 +145,11 @@ dp[i][j] = Math.min(dp[i][j], arr1[i - 1]);
 Integer higher = set.higher(dp[i - 1][j - 1]);
 dp[i][j] = Math.min(dp[i][j], higher);
 ```
+# 1189. Maximum Number of Balloons
+统计次数
+# 1190. Reverse Substrings Between Each Pair of Parentheses
+用栈模拟
+# 1191. K-Concatenation Maximum Sum
+考虑最大的几种情况，前缀，后缀，中间，前缀+后缀，前缀+全部+后缀
+# 1192. Critical Connections in a Network
+`tarjan`算法求割点
