--- a/1101-1200.md
+++ b/1101-1200.md
@@ -153,3 +153,7 @@ dp[i][j] = Math.min(dp[i][j], higher);
 考虑最大的几种情况，前缀，后缀，中间，前缀+后缀，前缀+全部+后缀
 # 1192. Critical Connections in a Network
 `tarjan`算法求割点
+# 1195. Fizz Buzz Multithreaded
+设定`CyclicBarrier`，等待其他线程都一起触发之后，才进行下一步操作
+# 1200. Minimum Absolute Difference
+排序后遍历求出最小值，再遍历一遍加入结果中
