--- a/1201-1300.md
+++ b/1201-1300.md
@@ -6,3 +6,11 @@
 双层拓扑排序
 # 1206. Design Skiplist
 跳表，往右下移动
+# 1207. Unique Number of Occurrences
+统计次数，看是否每个次数只出现了一次
+# 1208. Get Equal Substrings Within Budget
+滑动窗口，窗口内的和最大不能超过`maxCount`
+# 1209. Remove All Adjacent Duplicates in String II
+用栈同时记录栈顶的值和出现的次数
+# 1210. Minimum Moves to Reach Target with Rotations
+`bfs`，多一个变量记录方向
