--- a/1201-1300.md
+++ b/1201-1300.md
@@ -14,3 +14,15 @@
 用栈同时记录栈顶的值和出现的次数
 # 1210. Minimum Moves to Reach Target with Rotations
 `bfs`，多一个变量记录方向
+# 1217. Play with Chips
+奇数偶数的个数最小值
+# 1218. Longest Arithmetic Subsequence of Given Difference
+`dp[i]`表示以`i`结尾的最长长度，直接由`dp[i-d]`得到
+# 1219. Path with Maximum Gold
+从每个点大于`0`的点开始`dfs`，比较`4`个方向的最大值
+# 1220. Count Vowels Permutation
+递推
+# 1221. Split a String in Balanced Strings
+左加右减，为`0`答案加`1`
+# 1222. Queens That Can Attack the King
+向`8`个方向遍历找到遇到的第一个点
