--- a/1201-1300.md
+++ b/1201-1300.md
@@ -26,3 +26,11 @@
 左加右减，为`0`答案加`1`
 # 1222. Queens That Can Attack the King
 向`8`个方向遍历找到遇到的第一个点
+# 1223. Dice Roll Simulation
+记忆化递归，记录前一个值和出现的次数
+# 1224. Maximum Equal Frequency
+维护一个出现次数的个数关系
+# 1226. The Dining Philosophers
+信号量处理
+# 1227. Airplane Seat Assignment Probability
+比较直观的想法，当第`i`个人坐下的时候，肯定第`i`个位置有人了（要么被自己坐，要么被别人已经），这样最后不确定性只有第`1`个和第`n`个
