--- a/1201-1300.md
+++ b/1201-1300.md
@@ -34,3 +34,11 @@
 信号量处理
 # 1227. Airplane Seat Assignment Probability
 比较直观的想法，当第`i`个人坐下的时候，肯定第`i`个位置有人了（要么被自己坐，要么被别人已经），这样最后不确定性只有第`1`个和第`n`个
+# 1232. Check If It Is a Straight Line
+遍历判断每个点的斜率
+# 1233. Remove Sub-Folders from the Filesystem
+排序后看是否是前缀
+# 1234. Replace the Substring for Balanced String
+找出需要替换的个数，再滑动窗口
+# 1235. Maximum Profit in Job Scheduling
+排序后，考虑选和不选的情况
