--- a/1201-1300.md
+++ b/1201-1300.md
@@ -42,3 +42,16 @@
 找出需要替换的个数，再滑动窗口
 # 1235. Maximum Profit in Job Scheduling
 排序后，考虑选和不选的情况
+# 1237. Find Positive Integer Solution for a Given Equation
+暴力求解
+# 1238. Circular Permutation in Binary Representation
+回溯下一个取值
+
+考虑生成格雷码
+``` java
+for (int i = 0; i < 1 << n; i++) gray.add(i ^ (i >> 1));
+```
+# 1239. Maximum Length of a Concatenated String with Unique Characters
+某个单词选和不选，可以用位运算优化
+# 1240. Tiling a Rectangle with the Fewest Squares
+考虑分割一个`k`的正方形后，还剩的递归，`11`，`13`特殊情况特殊处理
