--- a/1201-1300.md
+++ b/1201-1300.md
@@ -55,3 +55,16 @@ for (int i = 0; i < 1 << n; i++) gray.add(i ^ (i >> 1));
 某个单词选和不选，可以用位运算优化
 # 1240. Tiling a Rectangle with the Fewest Squares
 考虑分割一个`k`的正方形后，还剩的递归，`11`，`13`特殊情况特殊处理
+# 1247. Minimum Swaps to Make Strings Equal
+统计不同组`x`，`y`的个数，如果和为奇数则`-1`，为偶数时如果都为偶数，则每两组需要一个，如果都为奇数，则偶数部分成组，后面的奇数`xy`需要一次交换
+# 1248. Count Number of Nice Subarrays
+类似`a+b`，把每个奇数次数的频率求出来记录
+
+也可以存所有的奇数下标
+``` java
+arr[i] - arr[i - 1]) * (arr[i + k] - arr[i + k - 1]
+```
+# 1249. Minimum Remove to Make Valid Parentheses
+遍历先移除错误的右括号，如果`count`值大于`0`，则移除错误的左括号
+# 1250. Check If It Is a Good Array
+求数组所有元素的最大公约数
