--- a/1201-1300.md
+++ b/1201-1300.md
@@ -68,3 +68,14 @@ arr[i] - arr[i - 1]) * (arr[i + k] - arr[i + k - 1]
 遍历先移除错误的右括号，如果`count`值大于`0`，则移除错误的左括号
 # 1250. Check If It Is a Good Array
 求数组所有元素的最大公约数
+# 1252. Cells with Odd Values in a Matrix
+记录行和列的被标记的位置
+# 1253. Reconstruct a 2-Row Binary Matrix
+当`1`的时候，先放多的那个
+# 1254. Number of Closed Islands
+`dfs`，访问过变成2，再访问可以返回`true`
+# 1255. Maximum Score Words Formed by Letters
+每个单词选或不选的情况
+
+考虑枚举集合的子集，判断是否满足
+
