--- a/1201-1300.md
+++ b/1201-1300.md
@@ -78,4 +78,40 @@ arr[i] - arr[i - 1]) * (arr[i + k] - arr[i + k - 1]
 每个单词选或不选的情况
 
 考虑枚举集合的子集，判断是否满足
+# 1260. Shift 2D Grid
+转换成`1`维数组移`k`步
+# 1261. Find Elements in a Contaminated Binary Tree
+先通过`root`将数放到`set`中，再查找，构造`set`可以递归
+``` java
+public void init(TreeNode root, int value){
+    if (root == null) return;
+    root.val = value;
+    set.add(value);
+    init(root.left,  value * 2 + 1);
+    init(root.right, value * 2 + 2);
+}
+```
+# 1262. Greatest Sum Divisible by Three
+数学方法，`sum`如果可除`3`则直接返回，如果余`1`则考虑减去`1`个最小的`1`和最小的两个`2`，如果余`2`，则减去`1`个最小的`2`或者`2`个最小的`1`
 
+考虑`dp`
+``` java
+if (nums[i - 1] % 3 == 0) {
+    dp[i][0] = max(dp[i - 1][0], dp[i - 1][0] + nums[i - 1]);
+    dp[i][1] = max(dp[i - 1][1], dp[i - 1][1] + nums[i - 1]);
+    dp[i][2] = max(dp[i - 1][2], dp[i - 1][2] + nums[i - 1]);
+}
+else if (nums[i - 1] % 3 == 1) {
+    dp[i][0] = max(dp[i - 1][0], dp[i - 1][2] + nums[i - 1]);
+    dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] + nums[i - 1]);
+    dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + nums[i - 1]);
+}
+else if (nums[i - 1] % 3 == 2) {
+    dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + nums[i - 1]);
+    dp[i][1] = max(dp[i - 1][1], dp[i - 1][2] + nums[i - 1]);
+    dp[i][2] = max(dp[i - 1][2], dp[i - 1][0] + nums[i - 1]);
+}
+```
+# 1263. Minimum Moves to Move a Box to Their Target Location
+记录人的位置和箱子的位置，`01bfs`
+> 人的移动是没有代价的，因此要放到队头
