--- a/1201-1300.md
+++ b/1201-1300.md
@@ -115,3 +115,11 @@ else if (nums[i - 1] % 3 == 2) {
 # 1263. Minimum Moves to Move a Box to Their Target Location
 记录人的位置和箱子的位置，`01bfs`
 > 人的移动是没有代价的，因此要放到队头
+# 1266. Minimum Time Visiting All Points
+每次加上相隔两个点`x`，`y`差绝对值的最大值
+# 1267. Count Servers that Communicate
+统计每一行每一列出现的次数，再遍历看当前行或列是否存在大于`2`的情况
+# 1268. Search Suggestions System
+排序维护要算的起点，某一次找到后再找不到可以`break`
+# 1269. Number of Ways to Stay in the Same Place After Some Steps
+记忆化递归
