--- a/1201-1300.md
+++ b/1201-1300.md
@@ -123,3 +123,22 @@ else if (nums[i - 1] % 3 == 2) {
 排序维护要算的起点，某一次找到后再找不到可以`break`
 # 1269. Number of Ways to Stay in the Same Place After Some Steps
 记忆化递归
+# 1275. Find Winner on a Tic Tac Toe Game
+模拟判断每一步
+# 1276. Number of Burgers with No Waste of Ingredients
+数学求解
+# 1277. Count Square Submatrices with All Ones
+`dp[i][j]`表示当前`i`，`j`的左上角最大正方向
+# 1278. Palindrome Partitioning III
+遍历每个段，找最小值
+# 1281. Subtract the Product and Sum of Digits of an Integer
+直接求乘与和
+# 1282. Group the People Given the Group Size They Belong To
+将`id`用组的大小分组
+# 1283. Find the Smallest Divisor Given a Threshold
+二分答案，向上取整可以
+``` java
+(num + mid - 1) / mid;
+```
+# 1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix
+`bfs`记录每种状态
