--- a/1201-1300.md
+++ b/1201-1300.md
@@ -142,3 +142,32 @@ else if (nums[i - 1] % 3 == 2) {
 ```
 # 1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix
 `bfs`记录每种状态
+
+枚举第一行的翻转情况，考虑后面每一行的必须翻法
+# 1286. Iterator for Combination
+构造所有的排列
+# 1287. Element Appearing More Than 25% In Sorted Array
+桶记录次数，或者看`i`与`i+len`是否相等
+``` java
+int len = arr.length / 4;
+for(int i = 0; i + len < arr.length; i++){
+    if(arr[i] == arr[i + len]){
+        return arr[i];
+    }
+}
+```
+# 1288. Remove Covered Intervals
+按初始点排序，再按末尾点排序，比较末尾的点
+# 1289. Minimum Falling Path Sum II
+`dp`
+``` java
+for (int i = 1; i < n; i++) {
+    for (int j = 0; j < m; j++) {
+        for (int k = 0; k < m; k++) {
+            if (j != k) {
+                f[i][k] = Math.min(f[i][k], f[i - 1][j] + a[i][k]);
+            }
+        }
+    }
+}
+```
