--- a/1201-1300.md
+++ b/1201-1300.md
@@ -171,3 +171,11 @@ for (int i = 1; i < n; i++) {
     }
 }
 ```
+# 1290. Convert Binary Number in a Linked List to Integer
+放到`string`中后转换
+# 1291. Sequential Digits
+枚举首位构造
+# 1292. Maximum Side Length of a Square with Sum Less than or Equal to Threshold
+二维前缀和，在遍历点看该点能最大构成的正方形
+# 1293. Shortest Path in a Grid with Obstacles Elimination
+`bfs`，多一个障碍物的状态
