--- a/1201-1300.md
+++ b/1201-1300.md
@@ -179,3 +179,27 @@ for (int i = 1; i < n; i++) {
 二维前缀和，在遍历点看该点能最大构成的正方形
 # 1293. Shortest Path in a Grid with Obstacles Elimination
 `bfs`，多一个障碍物的状态
+# 1295. Find Numbers with Even Number of Digits
+求长度即可
+# 1296. Divide Array in Sets of K Consecutive Numbers
+用`treemap`模拟一遍
+# 1297. Maximum Number of Occurrences of a Substring
+只需要考虑最小值的字符串
+
+又由于`minSize`比较小，因此可以遍历处理每个`minSize`的串
+``` java
+String ss = s.substring(i, i + minSize);
+int status = 0;
+for (char c : ss.toCharArray()) {
+    status |= 1 << (c - 'a');
+}
+if (Integer.bitCount(status) > maxLetters) {
+    continue;
+}
+int size = cnt.getOrDefault(ss, 0) + 1;
+cnt.put(ss, size);
+```
+# 1298. Maximum Candies You Can Get from Boxes
+每次操作继续循环
+
+考虑`bfs`，记录能拿到的钥匙和能打开盒子，每次拿到新盒子，考虑是否有钥匙，拿到钥匙考虑是否有盒子，入队可以打开的盒子
