--- a/1201-1300.md
+++ b/1201-1300.md
@@ -203,3 +203,7 @@ cnt.put(ss, size);
 每次操作继续循环
 
 考虑`bfs`，记录能拿到的钥匙和能打开盒子，每次拿到新盒子，考虑是否有钥匙，拿到钥匙考虑是否有盒子，入队可以打开的盒子
+# 1299. Replace Elements with Greatest Element on Right Side
+从后遍历记录最大值
+# 1300. Sum of Mutated Array Closest to Target
+二分，需要先确定右边界
