--- a/1301-1400.md
+++ b/1301-1400.md
@@ -2,3 +2,38 @@
 `dp`转移，当可以从多个状态转移过来，则`cnt`加上之前的`cnt`
 # 1302. Deepest Leaves Sum
 层次遍历，更新最后一层的结果
+# 1304. Find N Unique Integers Sum up to Zero
+按正负构造
+# 1305. All Elements in Two Binary Search Trees
+中序遍历，归并排序
+# 1306. Jump Game III
+`bfs`
+# 1307. Verbal Arithmetic Puzzle
+对每个字母的取值进行遍历，计算的时候考虑将字母转换成索引，记录每个字母对结果的贡献
+> 即选某个字母为数字几的时候，结果会多多少
+# 1309. Decrypt String from Alphabet to Integer Mapping
+从后往前遍历，碰到`#`向前跳两个位置
+# 1310. XOR Queries of a Subarray
+前缀异或和
+# 1311. Get Watched Videos by Your Friends
+`bfs`，然后排序
+# 1312. Minimum Insertion Steps to Make a String Palindrome
+反一个过来求最长公共子序列，不一样的即需要插入
+# 1313. Decompress Run-Length Encoded List
+按步长为`2`的进行模拟
+# 1314. Matrix Block Sum
+二维前缀和
+# 1315. Sum of Nodes with Even-Valued Grandparent
+遍历，传入父亲节点和祖父节点是否为偶数
+# 1316. Distinct Echo Substrings
+暴力不同的串，容易超时
+
+字符串`hash`，直接得到区间的值
+# 1317. Convert Integer to the Sum of Two No-Zero Integers
+从`1`开始遍历看是否满足
+# 1318. Minimum Flips to Make a OR b Equal to c
+比较每位的`0`和`1`的情况
+# 1319. Number of Operations to Make Network Connected
+并查集，记录多少个联通块，多余多少条线
+# 1320. Minimum Distance to Type a Word Using Two Fingers
+记忆化递归，考虑左手按和右手按情况下的最小值
