--- a/1301-1400.md
+++ b/1301-1400.md
@@ -37,3 +37,44 @@
 并查集，记录多少个联通块，多余多少条线
 # 1320. Minimum Distance to Type a Word Using Two Fingers
 记忆化递归，考虑左手按和右手按情况下的最小值
+# 1323. Maximum 69 Number
+找第一个`6`替换成`9`
+``` java
+String s = num + "";
+s = s.replaceFirst("6", "9");
+return Integer.valueOf(s);
+```
+# 1324. Print Words Vertically
+按最大的列遍历，超出长度就加个空串，`trim`的时候为了防止前置空格被删除，可以在最前面加一个标志字符
+# 1325. Delete Leaves With a Given Value
+后序遍历，返回结果接在上一个节点上
+# 1326. Minimum Number of Taps to Open to Water a Garden
+最少区间覆盖整个线段，可以考虑`dp`
+> `dp[i]`到坐标`i`位置最少的个数，遍历某个`j`，通过`dp[left]`更新`j`的覆盖范围段
+
+考虑贪心，对`start`排序，找能覆盖当前最远节点的最大值
+# 1328. Break a Palindrome
+长度为`1`则返回空，否则替换第一个不为`a`的字母，否则替换最后一个为`b`
+# 1329. Sort the Matrix Diagonally
+按对角线把元素放到容器中，排序后取出
+# 1330. Reverse Subarray To Maximize Array Value
+拆绝对值，找数学规律
+# 1331. Rank Transform of an Array
+放到`treeset`中，按顺序依次弹出
+# 1332. Remove Palindromic Subsequences
+最多两次，全删去`a`，再删去`b`
+# 1333. Filter Restaurants by Vegan-Friendly, Price and Distance
+过滤后`sort`
+# 1334. Find the City With the Smallest Number of Neighbors at a Threshold Distance
+`floyd`算法，求每个点间的最短距离
+# 1335. Minimum Difficulty of a Job Schedule
+记忆化递归，预处理区间的最大值，再分为`d`个区间求值
+# 1337. The K Weakest Rows in a Matrix
+统计后排序
+# 1338. Reduce Array Size to The Half
+从最大的开始移除
+# 1339. Maximum Product of Splitted Binary Tree
+先求一遍`sum`，再遍历一遍求所有的分割
+# 1340. Jump Game V
+记忆化的递归，考虑左边能到的点和右边能到的点
+
