--- a/1301-1400.md
+++ b/1301-1400.md
@@ -77,4 +77,39 @@ return Integer.valueOf(s);
 先求一遍`sum`，再遍历一遍求所有的分割
 # 1340. Jump Game V
 记忆化的递归，考虑左边能到的点和右边能到的点
+# 1342. Number of Steps to Reduce a Number to Zero
+模拟一遍
+# 1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold
+前缀和或者滑动窗口都可以
+# 1344. Angle Between Hands of a Clock
+计算时针和分针走过的角度，然后算最小值
+# 1345. Jump Game IV
+直接`bfs`容易超时，考虑同样值访问过了就不需要再访问了，因此记录同值的跳跃情况
+# 1346. Check If N and Its Double Exist
+类似`a+b`
+# 1347. Minimum Number of Steps to Make Two Strings Anagram
+遍历看有多少个不相同的字符
+# 1348. Tweet Counts Per Frequency
+用`treeset`维护某个名字的的发文时间
+# 1349. Maximum Students Taking Exam
+状态压缩
+# 1351. Count Negative Numbers in a Sorted Matrix
+数据量小，直接暴力
+# 1352. Product of the Last K Numbers
+记录前缀积，若出现`0`，可以补一个`1`
+# 1353. Maximum Number of Events That Can Be Attended
+暴力的做法可以考虑先完成结束早的，然后看整个区间是否有可以用的一天
+``` java
+for (int[] event : events) {
+    for (int i = event[0]; i <= event[1]; i++) {
+        if (set.add(i)) {
+            break;
+        }
+    }
+}
+```
+考虑扫面线的思路，扫描每一天，将这天开始的加入到优先队列中，然后选择结束最早的，如果扫描到某天大于了队列头，则弹出
+# 1354. Construct Target Array With Multiple Sums
+优秀队列逆推，最大的数肯定是最后一个组成的
+>可能某个数逆推一次还是最大的，可以考虑通过求余一次退多次来降低复杂度
 
