--- a/1301-1400.md
+++ b/1301-1400.md
@@ -112,4 +112,44 @@ for (int[] event : events) {
 # 1354. Construct Target Array With Multiple Sums
 优秀队列逆推，最大的数肯定是最后一个组成的
 >可能某个数逆推一次还是最大的，可以考虑通过求余一次退多次来降低复杂度
+# 1356. Sort Integers by The Number of 1 Bits
+直接统计1出现的次数，排序
+1357. Apply Discount Every n Orders
+模拟
+# 1358. Number of Substrings Containing All Three Characters
+滑动窗口
+
+另外考虑`dp`
+记录每个元素最近出现位置
+``` java
+for(int i = 0; i < len; ++i){
+    t[s.charAt(i)-'a'] = i+1;
+    res += Math.min(t[0], Math.min(t[1],t[2]));
+}
+```
+# 1359. Count All Valid Pickup and Delivery Options
+插空法，考虑前`n-1`对已经放好，最后一对可以在`2(n-1)+1`个空格里放，可以选一个位置一起放，也可以选两个位置放
+`dp[n]=dp[n-1]*[C(2n-1)选2+C(2n-1)选1]`
+# 1360. Number of Days Between Two Dates
+跟`1971`年求差值，或者用库函数
+# 1361. Validate Binary Tree Nodes
+先跑一遍出度入度情况，再对入度为`0`的点`dfs`看是否能全遍历
+# 1362. Closest Divisors
+从根号下`num+2`枚举
+# 1363. Largest Multiple of Three
+考虑余数的情况，如果余`1`，删去最小的`1`个余`1`的或者最小的`2`个余`2`的，如果余`2`，删去最小的`1`个余`2`的或者最小的`2`个余`1`的
+# 1365. How Many Numbers Are Smaller Than the Current Number
+暴力或者桶排序
+# 1366. Rank Teams by Votes
+记录每个单词每个排名的次数，然后排序
+# 1367. Linked List in Binary Tree
+两层`dfs`
+# 1368. Minimum Cost to Make at Least One Valid Path in a Grid
+`01bfs`，每次取出队头的就是最短的路径，出队时候可以标记为已访问
+>本质是`dijkstra`
+
+如果普通的`bfs`，不断更新`dist`也可以解，不过复杂度会高一点
+> 把放队头改为放队尾即是普通的`bfs`
+# 1370. Increasing Decreasing String
+存到数组中，正向遍历一次，反向遍历一次
 
