--- a/1301-1400.md
+++ b/1301-1400.md
@@ -152,4 +152,36 @@ for(int i = 0; i < len; ++i){
 > 把放队头改为放队尾即是普通的`bfs`
 # 1370. Increasing Decreasing String
 存到数组中，正向遍历一次，反向遍历一次
-
+# 1371. Find the Longest Substring Containing Vowels in Even Counts
+仍然是类似`a+b`的思想，`a`记录`5`个元音出现奇偶次的状态
+> 通过异或来更新状态
+# 1372. Longest ZigZag Path in a Binary Tree
+树上`dp`，返回左右的最大值，遍历过程中记录最大值
+# 1373. Maximum Sum BST in Binary Tree
+返回需要的值，如`sum`、子树最小值、最大值 
+# 1374. Generate a String With Characters That Have Odd Counts
+根据奇偶凑一下
+# 1375. Bulb Switcher III
+考虑遍历的最远左边与当前位置是否相等
+# 1376. Time Needed to Inform All Employees
+建树`bfs`，或者记忆化递归，求到每个点的距离
+# 1377. Frog Position After T Seconds
+建树，记录每个点的孩子有多少个，`dfs`传递概率值，反着跳判断可能好做一点
+# 1379. Find a Corresponding Node of a Binary Tree in a Clone of That Tree
+同时遍历两棵树
+# 1380. Lucky Numbers in a Matrix
+多开两个数组记录最小值最大值情况
+# 1381. Design a Stack With Increment Operation
+增量的时候，直接对每个值相加
+# 1382. Balance a Binary Search Tree
+取出所有数后，按中点重建
+# 1383. Maximum Performance of a Team
+从大到小枚举效率，用堆维护大于该效率的最大的不超过`k`个的`speed`
+# 1385. Find the Distance Value Between Two Arrays
+暴力统计
+# 1386. Cinema Seat Allocation
+反向考虑有障碍的行，可以用位运行去判断某一行有多少个座位
+# 1387. Sort Integers by The Power Value
+将每个值`value`求出来后排序，可以使用，可以考虑二维数组记录`value`和`idx`
+# 1388. Pizza With 3n Slices
+肯定需要选`len/3`个，转换成选不相邻的`len/3`个，有循环，因此考虑最后一个不选和第一个不选的情况
