--- a/1301-1400.md
+++ b/1301-1400.md
@@ -185,3 +185,13 @@ for(int i = 0; i < len; ++i){
 将每个值`value`求出来后排序，可以使用，可以考虑二维数组记录`value`和`idx`
 # 1388. Pizza With 3n Slices
 肯定需要选`len/3`个，转换成选不相邻的`len/3`个，有循环，因此考虑最后一个不选和第一个不选的情况
+# 1389. Create Target Array in the Given Order
+使用`list`的`add`按索引添加
+# 1390. Four Divisors
+暴力求每个数的因数
+# 1391. Check if There is a Valid Path in a Grid
+考虑连通性后`bfs`
+
+考虑将每个格子转换为`3*3`的方格，在对应位置标`1`，然后看是否可达
+# 1392. Longest Happy Prefix
+`kmp`
