--- a/1301-1400.md
+++ b/1301-1400.md
@@ -195,3 +195,12 @@ for(int i = 0; i < len; ++i){
 考虑将每个格子转换为`3*3`的方格，在对应位置标`1`，然后看是否可达
 # 1392. Longest Happy Prefix
 `kmp`
+# 1394. Find Lucky Integer in an Array
+统计词频，再遍历一次
+# 1395. Count Number of Teams
+数据量比较小，直接暴力
+# 1396. Design Underground System
+`map`存储模拟
+# 1397. Find All Good Strings
+数位`dp`加`kmp`跳转
+> 数位`dp`记忆化无法记录所有的前缀信息，因此记录匹配的个数，用`kmp`跳转
