--- a/1301-1400.md
+++ b/1301-1400.md
@@ -204,3 +204,7 @@ for(int i = 0; i < len; ++i){
 # 1397. Find All Good Strings
 数位`dp`加`kmp`跳转
 > 数位`dp`记忆化无法记录所有的前缀信息，因此记录匹配的个数，用`kmp`跳转
+# 1399. Count Largest Group
+统计个数，求`size`
+# 1400. Construct K Palindrome Strings
+统计奇数回文串出现的次数
