--- a/1401-1500.md
+++ b/1401-1500.md
@@ -11,3 +11,11 @@ for (int i = satisfaction.length; i >= 0; i--) {
     ans += sum;
 }
 ```
+# 1403. Minimum Subsequence in Non-Increasing Order
+从最大的开始加
+# 1404. Number of Steps to Reduce a Number in Binary Representation to One
+转换成大数`bigInteger`进行操作
+# 1405. Longest Happy String
+看第一个和第二个的大小，如果一样大就一样选一个，否则考虑第一个选两个，第二个选一个
+# 1406. Stone Game III
+考虑`diff`，第一个人可以比第二个人多拿多少
